--- a/Finnish/main/AuthManager.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/AuthManager.apk/res/values-fi-rFI/strings.xml
@@ -56,6 +56,8 @@
   <string name="HIPS_Perm_add_voicemail_Desc">Lisää järjestelmän ääniviestejä</string>
   <string name="HIPS_Perm_background_start_activity">Käynnistä taustalla</string>
   <string name="HIPS_Perm_background_start_activity_Desc">käynnistä taustalla</string>
+  <string name="HIPS_Perm_deamon_notification">Pysyvä ilmoitus</string>
+  <string name="HIPS_Perm_deamon_notification_Desc">näytä pysyviä ilmoituksia</string>
   <string name="HIPS_Perm_get_accounts">Pääsy laitteen tileihin</string>
   <string name="HIPS_Perm_get_accounts_Desc">Pääsy laitteessa oleviin kaikkiin tileihin</string>
   <string name="HIPS_Perm_get_installed_apps">Saa tietoa asennetuista sovelluksista</string>
